[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Enemies/Wolf.gd" type="Script" id=2]
[ext_resource path="res://assets/Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/WhiteColor.shader" type="Shader" id=7]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Enemies/Wolf/Wolf_spritesheet.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemies/WolfStats.gd" type="Script" id=14]
[ext_resource path="res://assets/UI/Popups/DamageContainer.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=17]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=21]
resource_name = "MoveDown"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=22]
resource_name = "MoveRight"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=23]
resource_name = "MoveUp"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeTimeScale" id=29]

[sub_resource type="AnimationNodeBlendTree" id=30]
graph_offset = Vector2( 0, 97.5 )
nodes/BlendSpace2D/node = SubResource( 28 )
nodes/BlendSpace2D/position = Vector2( 380, 140 )
nodes/TimeScale/node = SubResource( 29 )
nodes/TimeScale/position = Vector2( 580, 140 )
nodes/output/position = Vector2( 740, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "MoveUp"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=35]
blend_point_0/node = SubResource( 31 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 32 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 33 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 34 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeTimeScale" id=36]

[sub_resource type="AnimationNodeBlendTree" id=37]
nodes/BlendSpace2D/node = SubResource( 35 )
nodes/BlendSpace2D/position = Vector2( 80, 60 )
nodes/TimeScale/node = SubResource( 36 )
nodes/TimeScale/position = Vector2( 300, 60 )
nodes/output/position = Vector2( 460, 60 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Idle/node = SubResource( 30 )
states/Idle/position = Vector2( 626.94, 74.194 )
states/Move/node = SubResource( 37 )
states/Move/position = Vector2( 626.94, 186.194 )
transitions = [ "Idle", "Move", SubResource( 38 ), "Move", "Idle", SubResource( 39 ) ]
start_node = "Idle"
graph_offset = Vector2( 31.9396, 14.194 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="CircleShape2D" id=15]
radius = 16.0

[sub_resource type="CircleShape2D" id=16]
radius = 16.0

[sub_resource type="CircleShape2D" id=17]
radius = 32.0

[sub_resource type="CircleShape2D" id=18]

[sub_resource type="CircleShape2D" id=19]
radius = 9.0

[sub_resource type="CircleShape2D" id=20]
radius = 6.0

[node name="Wolf" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -2 )
texture = ExtResource( 13 )
offset = Vector2( 0, -12 )
vframes = 3
hframes = 6
frame = 12

[node name="AnimatedSpriteEye" type="AnimatedSprite" parent="Sprite"]
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="WolfStats" parent="." instance=ExtResource( 12 )]
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleDown"
anims/IdleDown = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/MoveDown = SubResource( 21 )
anims/MoveRight = SubResource( 22 )
anims/MoveUp = SubResource( 23 )
anims/StartFlashing = SubResource( 6 )
anims/StopFlashing = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 14 )
parameters/Idle/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/Idle/TimeScale/scale = 1.0
parameters/Move/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/Move/TimeScale/scale = 1.0

[node name="Talkbox" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talkbox"]
position = Vector2( 0, -12 )
shape = SubResource( 15 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 4 )
collision_layer = 8
script = ExtResource( 17 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 16 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 17 )

[node name="ChaseTimer" type="Timer" parent="PlayerDetectionZone"]
wait_time = 0.75

[node name="AttackController" parent="." instance=ExtResource( 1 )]
visible = false

[node name="AttackPlayerZone" parent="." instance=ExtResource( 10 )]
visible = false
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AttackPlayerZone" index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 18 )

[node name="AttackTimer" type="Timer" parent="AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -4 )
collision_mask = 4
damage = 21.0
accuracy = 4.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 19 )

[node name="SoftCollision" parent="." instance=ExtResource( 11 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 20 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 320.0
attenuation = 0.659754

[node name="EnemyHealth" parent="." instance=ExtResource( 9 )]
margin_top = 3.5968
margin_bottom = 3.5968

[node name="DamageContainer" parent="." instance=ExtResource( 16 )]
margin_top = 1.0
margin_bottom = 1.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="no_health" from="WolfStats" to="." method="_on_WolfStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="AttackPlayerZone/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="AttackPlayerZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
